--- a/graphs/classes.html
+++ b/graphs/classes.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <base href="../">
     <link rel="icon" href="images/favicon.ico"/>
+    <script src="https://cdn.jsdelivr.net/npm/css-vars-ponyfill@2"></script>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/base.css">
             <script src='https://unpkg.com/panzoom@8.7.3/dist/panzoom.min.js'></script>
