--- a/namespaces/efortmeyer-polar-stock.html
+++ b/namespaces/efortmeyer-polar-stock.html
@@ -116,7 +116,8 @@
 <dl class="phpdocumentor-table-of-contents">
     
             <dt class="phpdocumentor-table-of-contents__entry -class"><a href="classes/Efortmeyer-Polar-Stock-AutomaticDateField.html"><abbr title="\Efortmeyer\Polar\Stock\AutomaticDateField">AutomaticDateField</abbr></a></dt>
-        <dd>Represents a date field.</dd>
+        <dd>Represents a date field with and automatically
+generated value.</dd>
             <dt class="phpdocumentor-table-of-contents__entry -class"><a href="classes/Efortmeyer-Polar-Stock-DateField.html"><abbr title="\Efortmeyer\Polar\Stock\DateField">DateField</abbr></a></dt>
         <dd>Represents a date field.</dd>
             <dt class="phpdocumentor-table-of-contents__entry -class"><a href="classes/Efortmeyer-Polar-Stock-Entry.html"><abbr title="\Efortmeyer\Polar\Stock\Entry">Entry</abbr></a></dt>
