--- a/packages/Polar.html
+++ b/packages/Polar.html
@@ -257,7 +257,8 @@ is not over the default max length.</dd>
             <dt class="phpdocumentor-table-of-contents__entry -class"><a href="classes/Efortmeyer-Polar-Stock-Attributes-TypeValidation.html"><abbr title="\Efortmeyer\Polar\Stock\Attributes\TypeValidation">TypeValidation</abbr></a></dt>
         <dd>Configures validation of the type of a property&#039;s value.</dd>
             <dt class="phpdocumentor-table-of-contents__entry -class"><a href="classes/Efortmeyer-Polar-Stock-AutomaticDateField.html"><abbr title="\Efortmeyer\Polar\Stock\AutomaticDateField">AutomaticDateField</abbr></a></dt>
-        <dd>Represents a date field.</dd>
+        <dd>Represents a date field with and automatically
+generated value.</dd>
             <dt class="phpdocumentor-table-of-contents__entry -class"><a href="classes/Efortmeyer-Polar-Stock-DateField.html"><abbr title="\Efortmeyer\Polar\Stock\DateField">DateField</abbr></a></dt>
         <dd>Represents a date field.</dd>
             <dt class="phpdocumentor-table-of-contents__entry -class"><a href="classes/Efortmeyer-Polar-Stock-Entry.html"><abbr title="\Efortmeyer\Polar\Stock\Entry">Entry</abbr></a></dt>
