--- a/indices/files.html
+++ b/indices/files.html
@@ -156,7 +156,7 @@
                                                         <h3>H</h3>
         <ul class="phpdocumentor-list">
                     <li><a href="files/api-uielements-hiddenformcontrol.html"><abbr title="Api/UIElements/HiddenFormControl.php">HiddenFormControl.php</abbr></a></li>
-                    <li><a href="files/utils-htmlencoder.html"><abbr title="Utils/HtmlEncoder.php">HtmlEncoder.php</abbr></a></li>
+                    <li><a href="files/core-rendering-htmlencoder.html"><abbr title="Core/Rendering/HtmlEncoder.php">HtmlEncoder.php</abbr></a></li>
                     <li><a href="files/api-rendering-files-htmlfile.html"><abbr title="Api/Rendering/Files/HtmlFile.php">HtmlFile.php</abbr></a></li>
                 </ul>
                                     <h3>I</h3>
