--- a/packages/Polar.html
+++ b/packages/Polar.html
@@ -281,7 +281,7 @@ generated value.</dd>
         <dd>Contains a set of values representing scalar types.</dd>
             <dt class="phpdocumentor-table-of-contents__entry -class"><a href="classes/Efortmeyer-Polar-Stock-Validation-TypeValidation.html"><abbr title="\Efortmeyer\Polar\Stock\Validation\TypeValidation">TypeValidation</abbr></a></dt>
         <dd>Provides a way to validate a property&#039;s type.</dd>
-            <dt class="phpdocumentor-table-of-contents__entry -class"><a href="classes/Efortmeyer-Polar-Utils-HtmlEncoder.html"><abbr title="\Efortmeyer\Polar\Utils\HtmlEncoder">HtmlEncoder</abbr></a></dt>
+            <dt class="phpdocumentor-table-of-contents__entry -class"><a href="classes/Efortmeyer-Polar-Core-Rendering-HtmlEncoder.html"><abbr title="\Efortmeyer\Polar\Core\Rendering\HtmlEncoder">HtmlEncoder</abbr></a></dt>
         <dd>Provides a way to sanitize a template&#039;s variables.</dd>
     
     
