move csv-file-storage

--- a/packages/Polar.html
+++ b/packages/Polar.html
@@ -128,8 +128,6 @@ into an application.</dd>
         <dd>Use to register attribute configurations.</dd>
             <dt class="phpdocumentor-table-of-contents__entry -class"><a href="classes/Efortmeyer-Polar-Api-DataStorage-CollectionStorageFactory.html"><abbr title="\Efortmeyer\Polar\Api\DataStorage\CollectionStorageFactory">CollectionStorageFactory</abbr></a></dt>
         <dd>Provides a way to create a storage object.</dd>
-            <dt class="phpdocumentor-table-of-contents__entry -class"><a href="classes/Efortmeyer-Polar-Api-DataStorage-CsvFileStorage.html"><abbr title="\Efortmeyer\Polar\Api\DataStorage\CsvFileStorage">CsvFileStorage</abbr></a></dt>
-        <dd>Use to interact with a CSV file&#039;s data.</dd>
             <dt class="phpdocumentor-table-of-contents__entry -class"><a href="classes/Efortmeyer-Polar-Api-InMemoryAppConfig.html"><abbr title="\Efortmeyer\Polar\Api\InMemoryAppConfig">InMemoryAppConfig</abbr></a></dt>
         <dd>Provides an in memory interface for configuration the application.</dd>
             <dt class="phpdocumentor-table-of-contents__entry -class"><a href="classes/Efortmeyer-Polar-Api-Model.html"><abbr title="\Efortmeyer\Polar\Api\Model">Model</abbr></a></dt>
@@ -281,6 +279,8 @@ generated value.</dd>
         <dd>Contains a set of values representing scalar types.</dd>
             <dt class="phpdocumentor-table-of-contents__entry -class"><a href="classes/Efortmeyer-Polar-Stock-Validation-TypeValidation.html"><abbr title="\Efortmeyer\Polar\Stock\Validation\TypeValidation">TypeValidation</abbr></a></dt>
         <dd>Provides a way to validate a property&#039;s type.</dd>
+            <dt class="phpdocumentor-table-of-contents__entry -class"><a href="classes/Efortmeyer-Polar-Stock-DataStorage-CsvFileStorage.html"><abbr title="\Efortmeyer\Polar\Stock\DataStorage\CsvFileStorage">CsvFileStorage</abbr></a></dt>
+        <dd>Use to interact with a CSV file&#039;s data.</dd>
             <dt class="phpdocumentor-table-of-contents__entry -class"><a href="classes/Efortmeyer-Polar-Core-Rendering-HtmlEncoder.html"><abbr title="\Efortmeyer\Polar\Core\Rendering\HtmlEncoder">HtmlEncoder</abbr></a></dt>
         <dd>Provides a way to sanitize a template&#039;s variables.</dd>
     
